# vicuna

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  Vicuña_WP.md  convert_hf_to_gguf.py  deep-research-report.md  package-lock.json  package.json
.github/ci/: clang-format-baseline.txt  clang-tidy-baseline.txt  lizard-baseline.txt
.github/scripts/: check_clang_format_baseline.py  check_clang_tidy_baseline.py  check_lizard_baseline.py  check_yaml_syntax.rb
.github/workflows/: build.yml  check-vendor.yml  copilot-setup-steps.yml  editorconfig.yml  pre-tokenizer-hashes.yml  python-check-requirements.yml  python-lint.yml  python-type-check.yml  server-metal.yml  server-webui.yml  server.yml  update-ops-docs.yml  vicuna-ci.yml
ci/: run-valgrind-smoke.sh
common/: CMakeLists.txt  arg.cpp  common.h  log.cpp  openclaw-session-binding.cpp  openclaw-session-binding.h  openclaw-tool-fabric-events.cpp  openclaw-tool-fabric-events.h  openclaw-tool-fabric.cpp  openclaw-tool-fabric.h
common/jinja/: runtime.cpp  value.h
docs/: build.md
docs/development/: HOWTO-add-model.md  openclaw-tool-fabric.md  runtime-rebuild-process.md
include/: llama.h
specs/001-active-lora-memory/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-past-lora-condensation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-strict-memory-runtime/: architecture-guideline.md  data-model.md  gap-closure-plan.md  plan.md  quickstart.md  research.md  self-state-data-model.md  self-state-spec.md  self-state-tasks.md  spec.md  tasks.md
specs/013-functionality-audit/: audit-report.md  plan.md  research.md  spec.md  tasks.md
specs/014-hidden-state-lora-writes/: data-model.md  implementation-approach.md  plan.md  research.md  spec.md  tasks.md
specs/015-self-model-expansion/: data-model.md  implementation-approach.md  plan.md  research.md  spec.md  tasks.md
specs/016-react-loop-scaffolding/: data-model.md  implementation-approach.md  plan.md  research.md  spec.md  tasks.md
specs/017-loop-runner-executors/: data-model.md  implementation-approach.md  plan.md  research.md  spec.md  tasks.md
specs/023-adam-runtime-updates/: data-model.md  implementation-approach.md  plan.md  (+4 more)
src/: CMakeLists.txt  llama-active-lora.cpp  llama-active-lora.h  llama-adapter.cpp  llama-adapter.h  llama-bash-tool.cpp  llama-bash-tool.h  llama-cognitive-loop.cpp  llama-cognitive-loop.h  llama-context.cpp  llama-context.h  llama-graph.cpp  llama-graph.h  llama-hard-memory.cpp  llama-hard-memory.h  llama-model.cpp  llama-sampler.cpp  llama-self-state.cpp  llama-self-state.h  llama.cpp
tests/: CMakeLists.txt  test-active-lora.cpp  test-backend-sampler.cpp  test-cognitive-loop.cpp  test-gguf.cpp  test-jinja.cpp  test-openclaw-tool-fabric.cpp  test-past-lora.cpp  test-self-state.cpp  test-server-common.cpp  test-server-emotive-runtime.cpp  test-server-runtime-control.cpp  test-serving-lora-stack.cpp  test-tokenizer-random.py  test-tokenizers-repo.sh
tools/server/: CMakeLists.txt  README-dev.md  README.md  base64.h  server-bash-tool.cpp  server-bash-tool.h  server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-cvec-generator.cpp  server-cvec-generator.h  server-decode-controller.cpp  server-decode-controller.h  server-deepseek.cpp  server-deepseek.h  server-embedding-backend.cpp  server-embedding-backend.h  server-emotive-runtime.cpp  server-emotive-runtime.h  server-http.cpp  server-http.h  server-local-llama-provider.cpp  server-local-llama-provider.h  server-openclaw-fabric.cpp  server-openclaw-fabric.h  server-queue.cpp  server-runpod.cpp  server-runpod.h  server-runtime-control.cpp  server-runtime-control.h  server-runtime.cpp  server-runtime.h  server-task.cpp  server-task.h  server.cpp
tools/server/tests/: conftest.py  utils.py  vicuna-heuristic-memory.json
tools/server/tests/unit/: test_basic.py  test_chat_completion.py  test_compat_oai_responses.py  test_completion.py  test_ctx_shift.py  test_deepseek_provider.py  test_security.py  test_slot_save.py
(+303 files in other folders)
